# claudecode-chat-history

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: metadata.rs  mod.rs  sqlite.rs
src-tauri/src/models/: mod.rs
src-tauri/src/parser/: content.rs  jsonl.rs  mod.rs
src-tauri/src/parser/fixtures/: large_tokens.jsonl  multi_session.jsonl  unicode_content.jsonl  valid_simple.jsonl  valid_with_code.jsonl  valid_with_tools.jsonl  with_errors.jsonl
src-tauri/src/search/: index.rs  mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/watcher/: fs.rs  mod.rs
src/lib/components/: AnalyticsModal.svelte  BookmarkedFilter.svelte  CodeBlock.svelte  CodeBlock.test.ts  ConversationCard.svelte  ConversationCard.test.ts  ConversationDetail.svelte  ConversationList.svelte  ConversationListSkeleton.svelte  DateRangePicker.svelte  DetailPane.svelte  ErrorBoundary.svelte  FilterDropdown.svelte  FilterPills.svelte  Header.svelte  MessageBubble.svelte  MessageBubble.test.ts  ProjectFilter.svelte  SearchInput.svelte  SearchInput.test.ts  SearchResultList.svelte  Sidebar.svelte  TagFilter.svelte  TagInput.svelte  Toast.svelte  ToastContainer.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte
tests/e2e/: browse.spec.ts  copy-code.spec.ts  filter.spec.ts  search.spec.ts
(+18 files in other folders)
