[package]
name = "claudecode-chat-history"
version = "0.1.0"
description = "Claude Code History Viewer - Browse and search Claude Code conversation history"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claudecode_chat_history_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite with bundled SQLite (includes FTS5 by default)
rusqlite = { version = "0.32", features = ["bundled"] }

# File system watching
notify = "8"

# Standard directory paths
dirs = "6"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging/tracing
tracing = "0.1"

[dev-dependencies]
tempfile = "3.24.0"

